[package]
name = "macromapper"
version = "0.1.0"
edition = "2021"
authors = ["June M"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.26"
egui = "0.21.0"
egui-macroquad = "0.15.0"
egui_extras = {version="0.21.0", features=["svg"]}
geo = "0.27.0"
undo = "0.51.0"
ico = "0.3.0"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
